--- a/index.html
+++ b/index.html
@@ -53,7 +53,11 @@
     </div>
   </div>
 </div>
+<!-- .jumbotron -->
+
+
 <!-- About -->
+<!-- .about -->
 
 <div class="container-md">
 <!-- User Stories -->
@@ -62,13 +66,14 @@
     <img src="https://images.unsplash.com/photo-1549540807-9442299306da?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" class="card-img-top" alt="User Story 1">
     <div class="card-body">
          <blockquote class="blockquote">
-             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-              <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
+             <p class="card-text">Infinity Studio is the best! I can always find a class to attend thanks to their flexible schedule.</p>
+            <footer class="blockquote-footer">Sara Solar<br><cite title="Source Title">Infinity Studio Member</cite></footer>
         </blockquote>
-    </div>
+      </div>
     <div class="card-footer">
     </div>
   </div>
+
   <div class="card">
     <img src="https://images.unsplash.com/photo-1549540952-f1a0ff6d3e74?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" class="card-img-top" alt="User Story 2">
     <div class="card-body">
@@ -78,9 +83,9 @@
     </blockquote>
     </div>
     <div class="card-footer">
-
     </div>
   </div>
+
   <div class="card">
     <img src="https://images.unsplash.com/photo-1516526995003-435ccce2be97?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" class="card-img-top" alt="User Story 3">
     <div class="card-body">
@@ -93,8 +98,8 @@
     </div>
   </div>
 </div>
-
 </div>
+<!-- .user-stories -->
 
 </body>
 </html>
