Added opaque overlay to jumbotron image

--- a/index.html
+++ b/index.html
@@ -41,8 +41,10 @@
 </nav>
 </header>
 
+<div class="contianer-fluid">
 <!-- Jumbotron -->
-<div class="jumbotron jumbotrom-fluid">
+<div class="jumbotron-overlay"></div>
+<div class="jumbotron jumbotron-fluid">
   <div class="container h-100">
     <div class="row h-100 align-items-center">
       <div class="col-12 text-center">
@@ -54,7 +56,6 @@
   </div>
 </div>
 <!-- .jumbotron -->
-
 
 <!-- About -->
 <!-- .about -->
