--- a/index.html
+++ b/index.html
@@ -55,25 +55,33 @@
     </div>
   </div>
 </div>
+</div>
 <!-- .jumbotron -->
 
 <!-- About -->
 <!-- .about -->
 
-<div class="container-md">
-<!-- User Stories -->
+<div class="container">
+<!-- Card Deck -->
+<section class="user-stories">
+ <div class="row">
+        <div class="col-12 page header">
+            <h2 class="text-uppercase">Quotes</h2>
+            <hr class="block-divider block-divider--short">
+        </div>
+ </div>
 <div class="card-deck">
   <div class="card">
-    <img src="https://images.unsplash.com/photo-1549540807-9442299306da?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" class="card-img-top" alt="User Story 1">
-    <div class="card-body">
+        <img src="https://images.unsplash.com/photo-1549540807-9442299306da?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" class="card-img-top" alt="User Story 1">
+             <div class="card-body">
          <blockquote class="blockquote">
              <p class="card-text">Infinity Studio is the best! I can always find a class to attend thanks to their flexible schedule.</p>
             <footer class="blockquote-footer">Sara Solar<br><cite title="Source Title">Infinity Studio Member</cite></footer>
         </blockquote>
       </div>
-    <div class="card-footer">
+      <div class="card-footer">
     </div>
-  </div>
+</div>
 
   <div class="card">
     <img src="https://images.unsplash.com/photo-1549540952-f1a0ff6d3e74?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" class="card-img-top" alt="User Story 2">
@@ -99,8 +107,9 @@
     </div>
   </div>
 </div>
-</div>
-<!-- .user-stories -->
+</section>
+<!-- .card-deck-->
+
 
 </body>
 </html>
