Updated and styled user stories heading

--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
 <div class="container">
 <!-- Card Deck -->
 <section class="user-stories">
- <div class="row">
+    <div class="row">
         <div class="col-12 page header">
-            <h2 class="text-uppercase">Quotes</h2>
-            <hr class="block-divider block-divider--short">
+             <h2 class="quotes-header">Quotes</h2>
+                 <hr class="block-divider block-divider--short">
         </div>
  </div>
 <div class="card-deck">
@@ -109,7 +109,7 @@
 </div>
 </section>
 <!-- .card-deck-->
-
+</div>
 
 </body>
 </html>
