Updated content in user stories heading text

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 <section class="user-stories">
     <div class="row">
         <div class="col-12 page header">
-             <h2 class="quotes-header">Quotes</h2>
+             <h2 class="quotes-header">User Testimonials</h2>
                  <hr class="block-divider block-divider--short">
         </div>
  </div>
