--- a/index.html
+++ b/index.html
@@ -1,46 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" integrity="sha384-v8BU367qNbs/aIZIxuivaU55N5GPF89WBerHoGA4QTcbUjYiLQtKdrfXnqAcXyTv" crossorigin="anonymous">
-    <link href="/assets/css/style.css" rel="stylesheet" type="text/css" />
-    <title>Infinity</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+		integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css"
+		integrity="sha384-v8BU367qNbs/aIZIxuivaU55N5GPF89WBerHoGA4QTcbUjYiLQtKdrfXnqAcXyTv" crossorigin="anonymous">
+	<link href="/assets/css/style.css" rel="stylesheet" type="text/css" />
+	<title>Infinity</title>
 </head>
 <body>
-<header>
-<!-- Navigation -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light shadow fixed-top">
-    <a class="navbar-brand" href="#"><i class="fas fa-infinity"></i> Infinity</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+	<header>
+		<!-- Navigation -->
+		<nav class="navbar navbar-expand-lg navbar-light bg-light shadow fixed-top">
+			<a class="navbar-brand" href="#"><i class="fas fa-infinity"></i> Infinity</a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
         </button>
-       <div class="collapse navbar-collapse" id="navbarCollapse">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home<span class="sr-only">(current)</span>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Schedule</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
-        </li>
-      </ul>
-        <form class="form-inline mt-2 mt-md-0">
-        <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-        <button class="btn btn-info my-2 my-sm-0" type="submit">Search</button>
-      </form>
-    </div>
-</nav>
-</header>
-
+			<div class="collapse navbar-collapse" id="navbarCollapse">
+				<ul class="navbar-nav mr-auto">
+					<li class="nav-item active">
+						<a class="nav-link" href="#">Home<span class="sr-only">(current)</span>
+						</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">About</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Schedule</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Contact</a>
+					</li>
+				</ul>
+				<form class="form-inline mt-2 mt-md-0">
+					<input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+					<button class="btn btn-info my-2 my-sm-0" type="submit">Search</button>
+				</form>
+			</div>
+		</nav>
+	</header>
 <div class="contianer-fluid">
 <!-- Jumbotron -->
 <div class="jumbotron-overlay"></div>
@@ -49,67 +50,115 @@
     <div class="row h-100 align-items-center">
       <div class="col-12 text-center">
         <h1 class="display-4 font-weight-light">Infinity Yoga Studio</h1>
-        <p class="lead">Begin your practice today</p>
-        <p><a class="btn btn-info btn-lg" href="#" role="button">Learn more &raquo;</a></p>
-      </div>
-    </div>
+         <p class="lead">Begin your practice today</p>
+         <p><button class="btn btn-info btn-lg" type="button" data-toggle="modal" href="#" role="button" data-target=".bd-example-modal-lg">Learn more &raquo;</button></p>
+         <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+         <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+            
+            <!-- Modal Pop-Up Form-->
+			<form>
+            <div class="container container-fluid">
+            <div class="form-group form-hover">
+                <label for="inputName1">Name</label>
+                <input type="text" class="form-control" id="inputName1" placeholder="Your Name">
+                  <label for="inputName2">Phone Number</label>
+                <input type="text" class="form-control" id="inputName2" placeholder="555-555-5555">
+	            <label for="inputEmail">Email</label>
+	            <input type="email" class="form-control" id="inputEmail" placeholder="name@example.com">
+                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+  </div>
+        </div>
+	<div class="form-group form-check">
+		<input type="checkbox" class="form-check-input" id="exampleCheck1">
+		<label class="form-check-label" for="exampleCheck1">I agree to be contacted by Infinity Yoga Studio</label>
+	</div>
+	<button type="submit" class="btn btn-primary">Submit</button>
+</form>
+            </div>
+                </div>
+              </div>
+            </div>
+         </div>
+       </div>
   </div>
 </div>
-</div>
+
 <!-- .jumbotron -->
 
 <!-- About -->
 <!-- .about -->
 
 <div class="container">
-<!-- Card Deck -->
-<section class="user-stories">
-    <div class="row">
-        <div class="col-12 page header">
-             <h2 class="quotes-header">User Testimonials</h2>
-                 <hr class="block-divider block-divider--short">
-        </div>
- </div>
-<div class="card-deck">
-  <div class="card">
-        <img src="https://images.unsplash.com/photo-1549540807-9442299306da?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" class="card-img-top" alt="User Story 1">
-             <div class="card-body">
-         <blockquote class="blockquote">
-             <p class="card-text">Infinity Studio is the best! I can always find a class to attend thanks to their flexible schedule.</p>
-            <footer class="blockquote-footer">Sara Solar<br><cite title="Source Title">Infinity Studio Member</cite></footer>
-        </blockquote>
-      </div>
-      <div class="card-footer">
-    </div>
+	<!-- Card Deck -->
+	<section class="user-stories">
+		<div class="row">
+			<div class="col-12 page header">
+				<h2 class="quotes-header">User Testimonials</h2>
+				<hr class="block-divider block-divider--short">
+			</div>
+		</div>
+		<div class="card-deck">
+			<div class="card">
+				<img src="https://images.unsplash.com/photo-1549540807-9442299306da?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" class="card-img-top" alt="User Story 1">
+				<div class="card-body">
+					<blockquote class="blockquote">
+						<p class="card-text">Infinity Studio is the best! I can always find a class to attend thanks to
+							their flexible schedule.</p>
+						<footer class="blockquote-footer">Sara
+							Solar<br><cite title="Source Title">Infinity Studio Member</cite></footer>
+					</blockquote>
+				</div>
+				<div class="card-footer">
+				</div>
+			</div>
+
+			<div class="card">
+				<img src="https://images.unsplash.com/photo-1549540952-f1a0ff6d3e74?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" class="card-img-top" alt="User Story 2">
+				<div class="card-body">
+					<blockquote class="blockquote">
+						<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere
+							erat a ante.</p>
+						<footer class="blockquote-footer">Someone famous in
+							<cite title="Source Title">Source Title</cite></footer>
+					</blockquote>
+				</div>
+				<div class="card-footer">
+				</div>
+			</div>
+
+			<div class="card">
+				<img src="https://images.unsplash.com/photo-1516526995003-435ccce2be97?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" class="card-img-top" alt="User Story 3">
+				<div class="card-body">
+					<blockquote class="blockquote">
+						<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere
+							erat a ante.</p>
+						<footer class="blockquote-footer">Someone famous in
+							<cite title="Source Title">Source Title</cite></footer>
+					</blockquote>
+				</div>
+				<div class="card-footer">
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- .card-deck-->
 </div>
 
-  <div class="card">
-    <img src="https://images.unsplash.com/photo-1549540952-f1a0ff6d3e74?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" class="card-img-top" alt="User Story 2">
-    <div class="card-body">
-     <blockquote class="blockquote">
-        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-     <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
-    </blockquote>
-    </div>
-    <div class="card-footer">
-    </div>
-  </div>
 
-  <div class="card">
-    <img src="https://images.unsplash.com/photo-1516526995003-435ccce2be97?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" class="card-img-top" alt="User Story 3">
-    <div class="card-body">
-          <blockquote class="blockquote">
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-                <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
-     </blockquote>
-    </div>
-    <div class="card-footer">
-    </div>
-  </div>
-</div>
-</section>
-<!-- .card-deck-->
-</div>
+
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+	integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
+</script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+	integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+</script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+	integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+</script>
 
 </body>
+
 </html>
