Updated about section with font awesome icons and styled h3 text

--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-		integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css"
-		integrity="sha384-v8BU367qNbs/aIZIxuivaU55N5GPF89WBerHoGA4QTcbUjYiLQtKdrfXnqAcXyTv" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" integrity="sha384-v8BU367qNbs/aIZIxuivaU55N5GPF89WBerHoGA4QTcbUjYiLQtKdrfXnqAcXyTv" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 	<link href="/assets/css/style.css" rel="stylesheet" type="text/css" />
 	<title>Infinity</title>
 </head>
@@ -94,7 +92,7 @@
 	<section class="user-stories">
 		<div class="row">
 			<div class="col-12 page header">
-				<h2 class="quotes-header">User Testimonials</h2>
+				<h2 class="quotes-header">User Stories</h2>
 				<hr class="block-divider block-divider--short">
 			</div>
 		</div>
@@ -143,7 +141,43 @@
 		</div>
 	</section>
 	<!-- .card-deck-->
+
 </div>
+<!------------------ About -->
+<!--this section was copied from code institute's whiskey drop project-->
+<div class="container-wrapper container-wrapper--grey">
+        <div class="container about-container content-container">
+            <section class="about">
+                <div class="row">
+                    <div class="col-12 page-header">
+                        <h2 class="page-header">Our Studio</h2>
+                        <hr class="block-divider block-divider--short block-divider--white">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="about">
+                            <h3 class="about-feature"><i class="fas fa-peace d-none d-sm-block"></i> Peace</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="about">
+                            <h3 class="about-feature"><i class="fas fa-heart d-none d-sm-block"></i> Love</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="about">
+                            <h3 class="about-feature"><i class="fas fa-infinity d-none d-sm-block"></i> Infinity</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                        </div>
+                        </div>
+                    </div>
+            </section>
+            <!-- /.features -->
+        </div>
+    </div>
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
