--- a/index.html
+++ b/index.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" integrity="sha384-v8BU367qNbs/aIZIxuivaU55N5GPF89WBerHoGA4QTcbUjYiLQtKdrfXnqAcXyTv" crossorigin="anonymous">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css"
+		integrity="sha384-v8BU367qNbs/aIZIxuivaU55N5GPF89WBerHoGA4QTcbUjYiLQtKdrfXnqAcXyTv" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+		integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 	<link href="/assets/css/style.css" rel="stylesheet" type="text/css" />
 	<title>Infinity</title>
 </head>
+
 <body>
+<!-- Header -->
 	<header>
-		<!-- Navigation -->
+		<!-- Navbar -->
 		<nav class="navbar navbar-expand-lg navbar-light bg-light shadow fixed-top">
 			<a class="navbar-brand" href="#"><i class="fas fa-infinity"></i> Infinity</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -24,7 +29,7 @@
 						</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">About</a>
+						<a class="nav-link" href="#about">About</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#">Schedule</a>
@@ -40,156 +45,166 @@
 			</div>
 		</nav>
 	</header>
-<div class="contianer-fluid">
-<!-- Jumbotron -->
-<div class="jumbotron-overlay"></div>
-<div class="jumbotron jumbotron-fluid">
-  <div class="container h-100">
-    <div class="row h-100 align-items-center">
-      <div class="col-12 text-center">
-        <h1 class="display-4 font-weight-light">Infinity Yoga Studio</h1>
-         <p class="lead">Begin your practice today</p>
-         <p><button class="btn btn-info btn-lg" type="button" data-toggle="modal" href="#" role="button" data-target=".bd-example-modal-lg">Learn more &raquo;</button></p>
-         <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
-         <div class="modal-dialog modal-lg" role="document">
-            <div class="modal-content">
-            
-            <!-- Modal Pop-Up Form-->
-			<form>
-            <div class="container container-fluid">
-            <div class="form-group form-hover">
-                <label for="inputName1">Name</label>
-                <input type="text" class="form-control" id="inputName1" placeholder="Your Name">
-                  <label for="inputName2">Phone Number</label>
-                <input type="text" class="form-control" id="inputName2" placeholder="555-555-5555">
-	            <label for="inputEmail">Email</label>
-	            <input type="email" class="form-control" id="inputEmail" placeholder="name@example.com">
-                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-  </div>
-        </div>
-	<div class="form-group form-check">
-		<input type="checkbox" class="form-check-input" id="exampleCheck1">
-		<label class="form-check-label" for="exampleCheck1">I agree to be contacted by Infinity Yoga Studio</label>
+	<div class="contianer-fluid">
+		<!-- Jumbotron -->
+		<div class="jumbotron-overlay"></div>
+		<div class="jumbotron jumbotron-fluid">
+			<div class="container h-100">
+				<div class="row h-100 align-items-center">
+					<div class="col-12 text-center">
+						<h1 class="display-4 font-weight-light">Infinity Yoga Studio</h1>
+						<p class="lead">Begin your practice today</p>
+						<p><button class="btn btn-info btn-lg" type="button" data-toggle="modal" href="#" role="button" data-target=".bd-example-modal-lg">Learn more &raquo;</button>
+						</p>
+						<div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog"
+							aria-labelledby="myLargeModalLabel" aria-hidden="true">
+							<div class="modal-dialog modal-lg" role="document">
+								<div class="modal-content">
+
+									<!--Contact Modal-->
+									<form>
+										<div class="container container-fluid">
+											<div class="form-group form-hover">
+												<label for="inputName1">Name</label>
+												<input type="text" class="form-control" id="inputName1" placeholder="Your Name">
+												<label for="inputName2">Phone Number</label>
+												<input type="text" class="form-control" id="inputName2" placeholder="555-555-5555">
+												<label for="inputEmail">Email</label>
+												<input type="email" class="form-control" id="inputEmail" placeholder="name@example.com">
+												<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+											</div>
+										</div>
+										<div class="form-group form-check">
+											<input type="checkbox" class="form-check-input" id="exampleCheck1">
+											<label class="form-check-label" for="exampleCheck1">I agree to be contacted by Infinity Yoga Studio</label>
+										</div>
+										<button type="submit" class="btn btn-primary">Submit</button>
+									</form>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
-	<button type="submit" class="btn btn-primary">Submit</button>
-</form>
-            </div>
-                </div>
-              </div>
-            </div>
-         </div>
-       </div>
-  </div>
-</div>
+	<!-- .jumbotron -->
 
-<!-- .jumbotron -->
+	<!-- About -->
+	<!-- .about -->
 
-<!-- About -->
-<!-- .about -->
-
-<div class="container">
-	<!-- Card Deck -->
-	<section class="user-stories">
-		<div class="row">
-			<div class="col-12 page header">
-				<h2 class="quotes-header">User Stories</h2>
-				<hr class="block-divider block-divider--short">
+	<div class="container">
+		<!-- Card Deck -->
+		<section class="user-stories">
+        <section id="about">
+			<div class="row">
+				<div class="col-12 page header">
+					<h2 class="quotes-header">User Stories</h2>
+					<hr class="block-divider block-divider--short">
+				</div>
 			</div>
+			<div class="card-deck">
+				<div class="card">
+					<img src="https://images.unsplash.com/photo-1549540807-9442299306da?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" class="card-img-top" alt="User Story 1">
+					<div class="card-body">
+						<blockquote class="blockquote">
+							<p class="card-text">Infinity Studio is the best! I can always find a class to attend thanks
+								to
+								their flexible schedule.</p>
+							<footer class="blockquote-footer">Sara
+								Solar<br><cite title="Source Title">Infinity Studio Member</cite></footer>
+						</blockquote>
+					</div>
+					<div class="card-footer">
+					</div>
+				</div>
+
+				<div class="card">
+					<img src="https://images.unsplash.com/photo-1549540952-f1a0ff6d3e74?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" class="card-img-top" alt="User Story 2">
+					<div class="card-body">
+						<blockquote class="blockquote">
+							<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
+								posuere
+								erat a ante.</p>
+							<footer class="blockquote-footer">Someone famous in
+								<cite title="Source Title">Source Title</cite></footer>
+						</blockquote>
+					</div>
+					<div class="card-footer">
+					</div>
+				</div>
+
+				<div class="card">
+					<img src="https://images.unsplash.com/photo-1516526995003-435ccce2be97?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" class="card-img-top" alt="User Story 3">
+					<div class="card-body">
+						<blockquote class="blockquote">
+							<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
+								posuere
+								erat a ante.</p>
+							<footer class="blockquote-footer">Someone famous in
+								<cite title="Source Title">Source Title</cite></footer>
+						</blockquote>
+					</div>
+					<div class="card-footer">
+					</div>
+				</div>
+			</div>
+		</section>
+		</section>
+		<!-- .card-deck-->
+	</div>
+
+	<!--  About -->
+	<div class="container-wrapper container-wrapper--grey">
+		<div class="container about-container content-container">
+			<section class="about">
+				<div class="row">
+					<div class="col-12 page-header">
+						<h2 class="page-header">Our Studio</h2>
+						<hr class="block-divider block-divider--short block-divider--white">
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-12 col-md-6 col-lg-4">
+						<div class="about">
+							<h3 class="about-feature"><i class="fas fa-peace d-none d-sm-block"></i> Peace</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+								ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+								ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+						</div>
+					</div>
+					<div class="col-12 col-md-6 col-lg-4">
+						<div class="about">
+							<h3 class="about-feature"><i class="fas fa-heart d-none d-sm-block"></i> Love</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+								ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+								ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+						</div>
+					</div>
+					<div class="col-12 col-md-6 col-lg-4">
+						<div class="about">
+							<h3 class="about-feature"><i class="fas fa-infinity d-none d-sm-block"></i> Infinity</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+								ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+								ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+						</div>
+					</div>
+				</div>
+			</section>
+			<!-- /.about -->
 		</div>
-		<div class="card-deck">
-			<div class="card">
-				<img src="https://images.unsplash.com/photo-1549540807-9442299306da?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" class="card-img-top" alt="User Story 1">
-				<div class="card-body">
-					<blockquote class="blockquote">
-						<p class="card-text">Infinity Studio is the best! I can always find a class to attend thanks to
-							their flexible schedule.</p>
-						<footer class="blockquote-footer">Sara
-							Solar<br><cite title="Source Title">Infinity Studio Member</cite></footer>
-					</blockquote>
-				</div>
-				<div class="card-footer">
-				</div>
-			</div>
+	</div>
 
-			<div class="card">
-				<img src="https://images.unsplash.com/photo-1549540952-f1a0ff6d3e74?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" class="card-img-top" alt="User Story 2">
-				<div class="card-body">
-					<blockquote class="blockquote">
-						<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere
-							erat a ante.</p>
-						<footer class="blockquote-footer">Someone famous in
-							<cite title="Source Title">Source Title</cite></footer>
-					</blockquote>
-				</div>
-				<div class="card-footer">
-				</div>
-			</div>
-
-			<div class="card">
-				<img src="https://images.unsplash.com/photo-1516526995003-435ccce2be97?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" class="card-img-top" alt="User Story 3">
-				<div class="card-body">
-					<blockquote class="blockquote">
-						<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere
-							erat a ante.</p>
-						<footer class="blockquote-footer">Someone famous in
-							<cite title="Source Title">Source Title</cite></footer>
-					</blockquote>
-				</div>
-				<div class="card-footer">
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- .card-deck-->
-
-</div>
-<!------------------ About -->
-<!--this section was copied from code institute's whiskey drop project-->
-<div class="container-wrapper container-wrapper--grey">
-        <div class="container about-container content-container">
-            <section class="about">
-                <div class="row">
-                    <div class="col-12 page-header">
-                        <h2 class="page-header">Our Studio</h2>
-                        <hr class="block-divider block-divider--short block-divider--white">
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-12 col-md-6 col-lg-4">
-                        <div class="about">
-                            <h3 class="about-feature"><i class="fas fa-peace d-none d-sm-block"></i> Peace</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-6 col-lg-4">
-                        <div class="about">
-                            <h3 class="about-feature"><i class="fas fa-heart d-none d-sm-block"></i> Love</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-6 col-lg-4">
-                        <div class="about">
-                            <h3 class="about-feature"><i class="fas fa-infinity d-none d-sm-block"></i> Infinity</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                        </div>
-                        </div>
-                    </div>
-            </section>
-            <!-- /.features -->
-        </div>
-    </div>
-
-<!-- Optional JavaScript -->
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-	integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
-</script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-	integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-</script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-	integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
-</script>
-
+	<!-- Optional JavaScript -->
+	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+		integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
+	</script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+		integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+	</script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+		integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+	</script>
 </body>
 </html>
