Moved user stories below about section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<link href="/assets/css/style.css" rel="stylesheet" type="text/css" />
 	<title>Infinity</title>
 </head>
-
+<!-- Body -->
 <body>
 <!-- Header -->
 	<header>
@@ -93,10 +93,50 @@
 	<!-- About -->
 	<!-- .about -->
 
-	<div class="container">
-		<!-- Card Deck -->
+	<!--.about-->
+	<div class="container-wrapper container-wrapper--grey">
+		<div class="container about-container content-container">
+			<section class="about">
+				<div class="row">
+					<div class="col-12 page-header">
+						<h2 class="page-header">Our Studio</h2>
+						<hr class="block-divider block-divider--short block-divider--white">
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-12 col-md-6 col-lg-4">
+						<div class="about">
+							<h3 class="about-feature"><i class="fas fa-peace d-none d-sm-block"></i> Peace</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+								ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+								ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+						</div>
+					</div>
+					<div class="col-12 col-md-6 col-lg-4">
+						<div class="about">
+							<h3 class="about-feature"><i class="fas fa-heart d-none d-sm-block"></i> Love</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+								ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+								ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+						</div>
+					</div>
+					<div class="col-12 col-md-6 col-lg-4">
+						<div class="about">
+							<h3 class="about-feature"><i class="fas fa-infinity d-none d-sm-block"></i> Infinity</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+								ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+								ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+						</div>
+					</div>
+				</div>
+			</section>
+			<!-- /.about -->
+		</div>
+	</div>
+
+    	<div class="container">
+		<!-- User Stories -->
 		<section class="user-stories">
-        <section id="about">
 			<div class="row">
 				<div class="col-12 page header">
 					<h2 class="quotes-header">User Stories</h2>
@@ -150,50 +190,9 @@
 				</div>
 			</div>
 		</section>
-		</section>
-		<!-- .card-deck-->
+		<!-- .user-stories-->
 	</div>
 
-	<!--  About -->
-	<div class="container-wrapper container-wrapper--grey">
-		<div class="container about-container content-container">
-			<section class="about">
-				<div class="row">
-					<div class="col-12 page-header">
-						<h2 class="page-header">Our Studio</h2>
-						<hr class="block-divider block-divider--short block-divider--white">
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-12 col-md-6 col-lg-4">
-						<div class="about">
-							<h3 class="about-feature"><i class="fas fa-peace d-none d-sm-block"></i> Peace</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-								ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-								ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-						</div>
-					</div>
-					<div class="col-12 col-md-6 col-lg-4">
-						<div class="about">
-							<h3 class="about-feature"><i class="fas fa-heart d-none d-sm-block"></i> Love</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-								ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-								ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-						</div>
-					</div>
-					<div class="col-12 col-md-6 col-lg-4">
-						<div class="about">
-							<h3 class="about-feature"><i class="fas fa-infinity d-none d-sm-block"></i> Infinity</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-								ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-								ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-						</div>
-					</div>
-				</div>
-			</section>
-			<!-- /.about -->
-		</div>
-	</div>
 
 	<!-- Optional JavaScript -->
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
