--- a/index.html
+++ b/index.html
@@ -90,26 +90,20 @@
 	</div>
 	<!-- .jumbotron -->
 
-	<!-- About -->
-	<!-- .about -->
-
-	<!--.about-->
-	<div class="container-wrapper container-wrapper--grey">
-		<div class="container about-container content-container">
-			<section class="about">
-				<div class="row">
+	<!--About-->
+		<div class="container container-fluid">
+			<section id="about">
+				<div class="row about">
 					<div class="col-12 page-header">
 						<h2 class="page-header">Our Studio</h2>
-						<hr class="block-divider block-divider--short block-divider--white">
+						<hr class="block-divider block-divider--short block-divider--black">
 					</div>
 				</div>
 				<div class="row">
 					<div class="col-12 col-md-6 col-lg-4">
 						<div class="about">
 							<h3 class="about-feature"><i class="fas fa-peace d-none d-sm-block"></i> Peace</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-								ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-								ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+							<p>Founded in 2007, Infinity Yoga Studio is the perfect place to escape the hustle & bustle of everyday life. Our class list includes Yin, Reiki and Restorative, so you can finally feel at peace!</p>
 						</div>
 					</div>
 					<div class="col-12 col-md-6 col-lg-4">
@@ -132,7 +126,6 @@
 			</section>
 			<!-- /.about -->
 		</div>
-	</div>
 
     	<div class="container">
 		<!-- User Stories -->
@@ -140,7 +133,7 @@
 			<div class="row">
 				<div class="col-12 page header">
 					<h2 class="quotes-header">User Stories</h2>
-					<hr class="block-divider block-divider--short">
+					<hr class="block-divider block-divider--short block-divider--black">
 				</div>
 			</div>
 			<div class="card-deck">
