Styled the about seciton

--- a/index.html
+++ b/index.html
@@ -95,29 +95,29 @@
 			<section id="about">
 				<div class="row about">
 					<div class="col-12 page-header">
-						<h2 class="page-header">Our Studio</h2>
+						<h2 class="page-header">About Our Studio</h2>
 						<hr class="block-divider block-divider--short block-divider--black">
 					</div>
 				</div>
 				<div class="row">
 					<div class="col-12 col-md-6 col-lg-4">
 						<div class="about">
-							<h3 class="about-feature"><i class="fas fa-peace d-none d-sm-block"></i> Peace</h3>
-							<p>Founded in 2007, Infinity Yoga Studio is the perfect place to escape the hustle & bustle of everyday life. Our class list includes Yin, Reiki and Restorative, so you can finally feel at peace!</p>
+							<h3 class="about-header"><i class="fas fa-peace d-none d-sm-block"></i> Peace</h3>
+							<p class="about-content">Founded in 2007, Infinity Yoga Studio is the perfect place to escape the hustle & bustle of everyday life. Our class list includes Yin, Reiki and Restorative, so you can finally feel at peace!</p>
 						</div>
 					</div>
 					<div class="col-12 col-md-6 col-lg-4">
 						<div class="about">
-							<h3 class="about-feature"><i class="fas fa-heart d-none d-sm-block"></i> Love</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+							<h3 class="about-header"><i class="fas fa-heart d-none d-sm-block"></i> Love</h3>
+							<p class="about-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
 								ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
 								ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 						</div>
 					</div>
 					<div class="col-12 col-md-6 col-lg-4">
 						<div class="about">
-							<h3 class="about-feature"><i class="fas fa-infinity d-none d-sm-block"></i> Infinity</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+							<h3 class="about-header"><i class="fas fa-infinity d-none d-sm-block"></i> Infinity</h3>
+							<p class="about-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
 								ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
 								ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 						</div>
