Updated and styled user stories

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 	<title>Infinity</title>
 </head>
 <!-- Body -->
+
 <body>
-<!-- Header -->
+	<!-- Header -->
 	<header>
 		<!-- Navbar -->
 		<nav class="navbar navbar-expand-lg navbar-light bg-light shadow fixed-top">
@@ -91,45 +92,87 @@
 	<!-- .jumbotron -->
 
 	<!--About-->
-		<div class="container container-fluid">
-			<section id="about">
-				<div class="row about">
-					<div class="col-12 page-header">
-						<h2 class="page-header">About Our Studio</h2>
-						<hr class="block-divider block-divider--short block-divider--black">
+	<div class="container container-fluid">
+		<section id="about">
+			<div class="row about">
+				<div class="col-12 page-header">
+					<h2 class="page-header">About Our Studio</h2>
+					<hr class="block-divider block-divider--short block-divider--black">
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-12 col-md-6 col-lg-4">
+					<div class="about">
+						<h3 class="about-header"><i class="fas fa-peace d-none d-sm-block"></i> Peace</h3>
+						<p class="about-content">Founded in 2007, Infinity Yoga Studio is the perfect place to escape
+							the hustle & bustle of everyday life. Our class list includes Yin, Reiki and Restorative, so
+							you can finally feel at peace!</p>
 					</div>
 				</div>
-				<div class="row">
-					<div class="col-12 col-md-6 col-lg-4">
-						<div class="about">
-							<h3 class="about-header"><i class="fas fa-peace d-none d-sm-block"></i> Peace</h3>
-							<p class="about-content">Founded in 2007, Infinity Yoga Studio is the perfect place to escape the hustle & bustle of everyday life. Our class list includes Yin, Reiki and Restorative, so you can finally feel at peace!</p>
-						</div>
-					</div>
-					<div class="col-12 col-md-6 col-lg-4">
-						<div class="about">
-							<h3 class="about-header"><i class="fas fa-heart d-none d-sm-block"></i> Love</h3>
-							<p class="about-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-								ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-								ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-						</div>
-					</div>
-					<div class="col-12 col-md-6 col-lg-4">
-						<div class="about">
-							<h3 class="about-header"><i class="fas fa-infinity d-none d-sm-block"></i> Infinity</h3>
-							<p class="about-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-								ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-								ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-						</div>
+				<div class="col-12 col-md-6 col-lg-4">
+					<div class="about">
+						<h3 class="about-header"><i class="fas fa-heart d-none d-sm-block"></i> Love</h3>
+						<p class="about-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+							tempor incididunt
+							ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+							ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 					</div>
 				</div>
-			</section>
-			<!-- /.about -->
-		</div>
+				<div class="col-12 col-md-6 col-lg-4">
+					<div class="about">
+						<h3 class="about-header"><i class="fas fa-infinity d-none d-sm-block"></i> Infinity</h3>
+						<p class="about-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+							tempor incididunt
+							ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+							ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- /.about -->
+	</div>
 
-    	<div class="container">
+	<br>
+	<div class="container container-fluid">
 		<!-- User Stories -->
-		<section class="user-stories">
+		<section class="quotes">
+			<div class="row quotes">
+				<div class="col-12 page-header">
+					<h2 class="quotes-header">User Stories</h2>
+					<hr class="block-divider block-divider--short block-divider--black">
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="col-12 col-lg-6">
+					<div class="quotes">
+						<h3 class="quotes-header"><i class="fas fa-quote-left d-none d-sm-block"></i></h3>
+						<br>
+						<blockquote class="quotes-content">
+							Infinity Studio is the best! I can always find a class to attend thanks to their flexible
+							schedule.
+							<footer class="blockquote-footer">Sara
+								Solar<br><cite title="Source Title">Infinity Studio Member</cite></footer>
+						</blockquote>
+					</div>
+				</div>
+
+				<div class="col-12 col-lg-6">
+					<h3 class="quotes-header"><i class="fas fa-quote-right d-none d-sm-block"></i></h3>
+					<br>
+					<blockquote class="quotes-content">
+						Infinity Studio is the best! I can always find a class to attend thanks to their flexible
+						schedule.
+						<footer class="blockquote-footer">Sara
+							Solar<br><cite title="Source Title">Infinity Studio Member</cite></footer>
+					</blockquote>
+				</div>
+			</div>
+		</section>
+		<!-- /.about -->
+	</div>
+
+	<!--	<section class="user-stories">
 			<div class="row">
 				<div class="col-12 page header">
 					<h2 class="quotes-header">User Stories</h2>
@@ -183,8 +226,8 @@
 				</div>
 			</div>
 		</section>
-		<!-- .user-stories-->
-	</div>
+	.user-stories-->
+
 
 
 	<!-- Optional JavaScript -->
@@ -199,4 +242,5 @@
 		integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
 	</script>
 </body>
+
 </html>
