Updated and styled all section headers

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 		<section id="about">
 			<div class="row">
 				<div class="col-12 page-header">
-					<h2 class="text-lg-center page-header">About</h2>
+					<h2 class="text-lg text-center page-header">About</h2>
 					<hr class="block-divider block-divider--short block-divider--black">
 				</div>
 			</div>
