Styled all section-header class elements in style.css

--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
 	<div class="container container-fluid">
 		<section id="about">
 			<div class="row">
-				<div class="col-12 page-header">
-					<h2 class="text-lg text-center page-header">About</h2>
+				<div class="col-12 section-header">
+					<h2 class="text-lg text-center section-header">About</h2>
 					<hr class="block-divider block-divider--short block-divider--black">
 				</div>
 			</div>
@@ -146,7 +146,7 @@
 		<!-- User Stories -->
 		<section class="quotes">
 			<div class="row quotes">
-				<div class="col-12 page-header">
+				<div class="col-12 section-header">
 					<h2 class="text-center quotes-header">User Stories</h2>
 					<hr class="block-divider block-divider--short block-divider--black">
 				</div>
