Added quotes to about section

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -43,8 +44,8 @@
 	</header>
 	<div class="contianer-fluid">
 
-<!-- Jumbotron -->
-<div class="jumbotron-overlay"></div>
+		<!-- Jumbotron -->
+		<div class="jumbotron-overlay"></div>
 		<div class="jumbotron jumbotron-fluid">
 			<div class="container h-100">
 				<div class="row h-100 align-items-center">
@@ -96,21 +97,85 @@
 					<hr class="block-divider block-divider--short block-divider--black">
 				</div>
 			</div>
-            <div class="row">
-			<div class="flex-column col-12">
-                <h4 class="text-sm text-center font-weight-lighter font-italic">We love yoga!</h4>
+			<div class="row">
+				<div class="flex-column col-12">
+					<h4 class="text-sm text-center font-weight-lighter font-italic">We love yoga!</h4>
 				</div>
-                <div class="flex-column col-12">
-                <p class="text-md-center font-weight-normal font-italic">
-                Founded in 2007, Infinity Yoga Studio offers yoga for every kind of person. Our classes range from Yin to Yang. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                </p>
-                </div>
-            </div>
-                <br>
-       
+				<div class="flex-column col-12">
+					<p class="text-md-center font-weight-normal font-italic">
+						Founded in 2007, Infinity Yoga Studio offers yoga for every kind of person. Our classes range
+						from Yin to Yang. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+						incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+						ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur
+						adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+						minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+					</p>
+				</div>
+			</div>
+			<br>
 
-                <div class="row">
-			<div class="col-12 col-md-6 col-lg-4">
+			<!-- Quotes -->
+			<section class="quotes">
+				<div class="row">
+					<div class="col-12 page header">
+						<h2 class="quotes-header">User Stories</h2>
+						<hr class="block-divider block-divider--short block-divider--black">
+					</div>
+				</div>
+				<div class="card-deck">
+					<div class="card">
+						<img src="https://images.unsplash.com/photo-1549540807-9442299306da?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" class="card-img-top" alt="User Story 1">
+						<div class="card-body">
+							<blockquote class="blockquote">
+								<p class="card-text">Infinity Studio is the best! I can always find a class to attend
+									thanks
+									to
+									their flexible schedule.</p>
+								<footer class="blockquote-footer">Sara
+									Solar<br><cite title="Source Title">Infinity Studio Member</cite></footer>
+							</blockquote>
+						</div>
+						<div class="card-footer">
+						</div>
+					</div>
+
+					<div class="card">
+						<img src="https://images.unsplash.com/photo-1549540952-f1a0ff6d3e74?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" class="card-img-top" alt="User Story 2">
+						<div class="card-body">
+							<blockquote class="blockquote">
+								<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
+									posuere
+									erat a ante.</p>
+								<footer class="blockquote-footer">Someone famous in
+									<cite title="Source Title">Source Title</cite></footer>
+							</blockquote>
+						</div>
+						<div class="card-footer">
+						</div>
+					</div>
+
+					<div class="card">
+						<img src="https://images.unsplash.com/photo-1516526995003-435ccce2be97?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" class="card-img-top" alt="User Story 3">
+						<div class="card-body">
+							<blockquote class="blockquote">
+								<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
+									posuere
+									erat a ante.</p>
+								<footer class="blockquote-footer">Someone famous in
+									<cite title="Source Title">Source Title</cite></footer>
+							</blockquote>
+						</div>
+						<div class="card-footer">
+						</div>
+					</div>
+				</div>
+			</section>
+			<!-- .quotes-->
+
+
+
+			<div class="row">
+				<div class="col-12 col-md-6 col-lg-4">
 					<div class="about">
 						<h3 class="about-header"><i class="fas fa-peace d-none d-sm-block"></i> Peace</h3>
 						<p class="about-content">Founded in 2007, Infinity Yoga Studio is the perfect place to escape
@@ -129,7 +194,8 @@
 				</div>
 				<div class="col-12 col-md-6 col-lg-4">
 					<div class="about">
-						<h3 class="about-header"><i class="fas fa-infinity d-none d-sm-block"></i> Infinity</h3>
+						<h3 class="about-header text-center"><i class="fas fa-infinity d-none d-sm-block"></i> Infinity
+						</h3>
 						<p class="about-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
 							tempor incididunt
 							ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
@@ -158,7 +224,8 @@
 						<h3 class="quotes-header"><i class="fas fa-quote-left d-none d-sm-block"></i></h3>
 						<br>
 						<blockquote class="text-center quotes-content">
-							Infinity Studio is the best! All of the instructors are super friendly and I can always find a class thanks to their flexible schedule.
+							Infinity Studio is the best! All of the instructors are super friendly and I can always find
+							a class thanks to their flexible schedule.
 							<footer class="blockquote-footer">Sara
 								Solar<br><cite title="Source Title">Infinity Studio Member</cite></footer>
 						</blockquote>
